--- a/src/About.module.scss
+++ b/src/About.module.scss
@@ -18,3 +18,11 @@
     font-size: 1.33rem;
   }
 }
+
+.imageFrame {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  width: 100%;
+  padding: 2rem;
+}
