--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,10 @@
 .App {
   padding: 0;
   margin: 0; }
+  .App h1 {
+    font-size: 2rem;
+    text-align: center;
+    font-family: Roboto, Helvetica, sans-serif; }
 
 .mainFrame {
   display: flex;
