--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,11 @@
 .App {
   padding: 0;
   margin: 0;
+  h1 {
+    font-size: 2rem;
+    text-align: center;
+    font-family: Roboto, Helvetica, sans-serif;
+  }
 }
 
 .mainFrame {
