Adding github "fork" ribbon. Removing cart on "About" page

--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -12,4 +12,14 @@
   min-width: 8rem;
   padding-left: 2rem; }
 
+.Header__link--home {
+  flex-grow: 100;
+  padding-left: 200px; }
+
+.GithubRibbon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 0; }
+
 /*# sourceMappingURL=Header.module.css.map */
